[workspace]
resolver = "3"
members = ["tokio_learn"]


[workspace.lints.clippy]
all = "warn"
pedantic = "warn"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }

[profile.release]
lto = true
strip = true
opt-level = 3
panic = "abort"
incremental = true

[profile.dev]
incremental = true
